<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ScrollView1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DetallesActivity" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp" >

        <TextView
            android:id="@+id/tvTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/title"
            android:textAppearance="@style/mid_red" />

        <LinearLayout
            android:id="@+id/LinearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/TextView1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/magnitude"
                android:textAppearance="@style/mid_blue" />

            <TextView
                android:id="@+id/tvMagnitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/None"
                android:textAppearance="@style/base" />

            <TextView
                android:id="@+id/TextView22"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/location"
                android:textAppearance="@style/mid_blue" />

            <TextView
                android:id="@+id/tvLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/None"
                android:textAppearance="@style/base" />

            <TextView
                android:id="@+id/TextView19"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/depth"
                android:textAppearance="@style/mid_blue" />

            <TextView
                android:id="@+id/tvDepth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/None"
                android:textAppearance="@style/base" />

            <TextView
                android:id="@+id/TextView16"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/latitude"
                android:textAppearance="@style/mid_blue" />

            <TextView
                android:id="@+id/tvLatitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/None"
                android:textAppearance="@style/base" />

            <TextView
                android:id="@+id/TextView13"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/longitude"
                android:textAppearance="@style/mid_blue" />

            <TextView
                android:id="@+id/tvLongitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/None"
                android:textAppearance="@style/base" />

            <TextView
                android:id="@+id/TextView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/date_time"
                android:textAppearance="@style/mid_blue" />

            <TextView
                android:id="@+id/tvDateTime"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/None"
                android:textAppearance="@style/base" />

            <TextView
                android:id="@+id/TextView07"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/link"
                android:textAppearance="@style/mid_blue" />

            <TextView
                android:id="@+id/tvLink"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="4"
                android:text="@string/None"
                android:textAppearance="@style/base" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp" >

            <Button
                android:id="@+id/btnWeb"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/visit_web" />

            <Button
                android:id="@+id/btnLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:onClick="onClick"
                android:text="@string/view_location" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>